# bash_kernel

./: .gitignore  Demo.ipynb  README.md  Validator_demo.ipynb  pyproject.toml  super_proprietary_api.js
bash_kernel/: install.py  kernel.py
binder/: postBuild  requirements.txt
prosaic_kernel/: __init__.py  __main__.py  display.py  install.py  kernel.py  validation_prompt.md
