[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prosaic_kernel"
authors = [
    {name = "ohAitch", email = "ohAitch@gmail.com"},
]
readme = "README.md"
dependencies = [
    "anthropic ~= 0.2.9", 
    "metakernel @ git+ssh://git@github.com/ohAitch/metakernel@v0.29.4-awaitable-2",
]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/ohAitch/prosaic_kernel"

